name:                     ghcjs-electron
author:                   Remy Goldschmidt
version:                  0.0.1
stability:                Experimental
build-type:               Simple
cabal-version:            >= 1.10
category:                 Web, JavaScript, Bindings
copyright:                2017 Remy Goldschmidt <taktoa@gmail.com>
maintainer:               taktoa@gmail.com
homepage:                 https://github.com/taktoa/ghcjs-electron
bug-reports:              https://github.com/taktoa/ghcjs-electron/issues
license:                  MIT
license-file:             LICENSE.md
extra-source-files:       README.md
synopsis:                 GHCJS FFI bindings to the Electron API.
description:              GHCJS FFI bindings to the Electron API.

source-repository head
    type:     git
    location: https://github.com/taktoa/ghcjs-electron.git

library
    build-depends:        base       == 4.*
                        , ghcjs-prim
                        , ghcjs-base
                          -- , transformers   == 0.5.*
                          -- , mtl            == 2.2.*
                          -- , bytestring     == 0.10.*
                          -- , text           == 1.2.*
                          -- , lens           == 4.15.*
                          -- , process        == 1.4.*
                          -- , data-default   == 0.7.*
                          -- , semigroups     == 0.18.*
                          -- , containers     == 0.5.*
                          -- , pipes          == 4.3.*
                          -- , vector         == 0.11.*
                          -- , deepseq        == 1.4.*
    default-language:     Haskell2010
    exposed-modules:      GHCJS.Electron
                        , GHCJS.Electron.Types
                        , GHCJS.Electron.Accelerator
                        , GHCJS.Electron.App
                        , GHCJS.Electron.AutoUpdater
                        , GHCJS.Electron.BrowserWindow
                        , GHCJS.Electron.BrowserWindowProxy
                        , GHCJS.Electron.ClientRequest
                        , GHCJS.Electron.Clipboard
                        , GHCJS.Electron.ContentTracing
                        , GHCJS.Electron.Cookies
                        , GHCJS.Electron.CrashReporter
                        , GHCJS.Electron.Debugger
                        , GHCJS.Electron.DesktopCapturer
                        , GHCJS.Electron.Dialog
                        , GHCJS.Electron.DownloadItem
                        , GHCJS.Electron.GlobalShortcut
                        , GHCJS.Electron.IncomingMessage
                        , GHCJS.Electron.IPCMain
                        , GHCJS.Electron.IPCRenderer
                        , GHCJS.Electron.Locales
                        , GHCJS.Electron.Menu
                        , GHCJS.Electron.MenuItem
                        , GHCJS.Electron.NativeImage
                        , GHCJS.Electron.Net
                        , GHCJS.Electron.PowerMonitor
                        , GHCJS.Electron.PowerSaveBlocker
                        , GHCJS.Electron.Process
                        , GHCJS.Electron.Protocol
                        , GHCJS.Electron.Remote
                        , GHCJS.Electron.Screen
                        , GHCJS.Electron.Session
                        , GHCJS.Electron.Shell
                        , GHCJS.Electron.SystemPreferences
                        -- , GHCJS.Electron.TouchBar
                        -- , GHCJS.Electron.TouchBar.Button
                        -- , GHCJS.Electron.TouchBar.ColorPicker
                        -- , GHCJS.Electron.TouchBar.Group
                        -- , GHCJS.Electron.TouchBar.Label
                        -- , GHCJS.Electron.TouchBar.Popover
                        -- , GHCJS.Electron.TouchBar.Scrubber
                        -- , GHCJS.Electron.TouchBar.SegmentedControl
                        -- , GHCJS.Electron.TouchBar.Slider
                        -- , GHCJS.Electron.TouchBar.Spacer
                        , GHCJS.Electron.Tray
                        , GHCJS.Electron.WebContents
                        , GHCJS.Electron.WebFrame
                        , GHCJS.Electron.WebRequest
                        , GHCJS.Electron.Window
    ghc-options:          -Wall -O2 -g
                          -fno-warn-type-defaults
                          -fno-warn-unused-do-bind
                          -fno-warn-unused-imports
    ghc-prof-options:     -auto-all
    hs-source-dirs:       src

test-suite tests
    build-depends:        base  == 4.*
                        , hspec == 2.4.*
                        , ghcjs-electron
                        , ghcjs-base
    type:                 exitcode-stdio-1.0
    default-language:     Haskell2010
    ghc-options:          -fhpc -Wall
    main-is:              src/Tests.hs
